--- a/conf/isspider_tmpl.tmpl
+++ b/conf/isspider_tmpl.tmpl
@@ -1,7 +1,6 @@
 import SexyLady
 from conf.config import TOKEN
-from tools.LogGenerator import make_logfile, ML
-from tools.TaskGenerator import async_run_loop
+from tools.LogGenerator import *
 
 
 class SN:
@@ -11,24 +10,18 @@ class SN:
         Want to pass a list like this: self.urls = ['links_1', 'links_2']
         your tasks are not many. You can also do this: self.urls = 'link'
         """
-        self.urls = "do something"
+        self.urls = "you crawled url"
 
     def set_spider(self):
+        """
+        You can get the activated app, which can automatically send some customized messages or files to your wechat
+        Please check the picture under the conf file for details
+        """
+        app = SexyLady.MiniWeChatBot(TOKEN)
+        ML.info('Calling %s file' % __file__.split('\\')[-1])
         try:
-            tasks = SexyLady.Request(urls=self.urls, is_async=True).builder()
-            response = async_run_loop(tasks)
+            SexyLady.Request(urls=self.urls).builder()
         except:
             ML.exception('ERROR Snapshot')
         finally:
             app.wcs_file('is_test_.log')
-
-
-if __name__ == '__main__':
-    """
-    You can initialize your log file
-    You can get the activated app, which can automatically send some customized messages or files to your wechat
-    Please check the picture under the conf file for details
-    """
-    make_logfile('is_test')
-    app = SexyLady.MiniWeChatBot(TOKEN)
-    SN().set_spider()
