改变模板（任务的逻辑再次更改）

--- a/conf/isparser_tmpl.tmpl
+++ b/conf/isparser_tmpl.tmpl
@@ -28,5 +28,5 @@ if __name__ == '__main__':
     #  You can initialize your log file
     make_logfile('is_test')
 
-    ML.info('Start running...')
+    ML.debug('Start running...')
     upload_task(tmplName=Parser.spider_tmplName, taskUrl=Parser.url)
