--- a/conf/isspider_tmpl.tmpl
+++ b/conf/isspider_tmpl.tmpl
@@ -1,9 +1,9 @@
-import SexyLady
+from Base import SexyLady
 from conf.config import TOKEN
 from tools.LogGenerator import *
 
 
-class SN:
+class Spider1:
 
     def __init__(self):
         """
@@ -18,10 +18,20 @@ class SN:
         Please check the picture under the conf file for details
         """
         app = SexyLady.MiniWeChatBot(TOKEN)
-        ML.info('Calling %s file' % __file__.split('\\')[-1])
+        ML.debug('Calling %s file' % __file__.split('\\')[-1])
         try:
             SexyLady.Request(urls=self.urls).builder()
         except:
             ML.exception('ERROR Snapshot')
         finally:
             app.wcs_file('is_test_.log')
+
+
+class Spider2:
+
+    pass
+
+
+class Spider3:
+
+    pass
